--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-###> symfony/mailer ###
-MAILER_DSN=smtp://josep.fuster.ruiz@gmail.com:PASSWORD@smtp.yandex.com:465?encryption=ssl&auth_mode=login
-###< symfony/mailer ###
 # In all environments, the following files are loaded if they exist,
 # the latter taking precedence over the former:
 #
@@ -33,3 +30,7 @@ APP_SECRET=b8f69b6d14e3a1259219d105e6ce9672
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="mysql://root@127.0.0.1:3306/torneind?serverVersion=mariadb-10.4.21"
 ###< doctrine/doctrine-bundle ###
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
