--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ APP_SECRET=b8f69b6d14e3a1259219d105e6ce9672
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="mysql://root@127.0.0.1:3306/torneind?serverVersion=mariadb-10.4.21"
+DATABASE_URL="mysql://root@127.0.0.1:3306/torneind1?serverVersion=mariadb-10.4.21"
 ###< doctrine/doctrine-bundle ###
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
