--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=b8f69b6d14e3a1259219d105e6ce9672
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -32,5 +32,4 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/torneind1?serverVersion=mariadb-10.4.2
 ###< doctrine/doctrine-bundle ###
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
